--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -1,7 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI_Delta
-
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
@@ -26,18 +22,18 @@ jobs:
       - uses: actions/checkout@v2
       - name: Decrypting Server Key
         shell: bash
-        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out assets/server.key -base64 -K ${{ secrets.Deepika_FORCE_DECRYPTION_KEY }} -iv ${{ secrets.Deepika_FORCE_DECRYPTION_IV }}
+        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out assets/server.key -base64 -K ${{ secrets.DECRYPTION_KEY }} -iv ${{ secrets.DECRYPTION_IV }}
       - name: Authorizing Org
         uses: forcedotcom/salesforcedx-actions@master
         with:
-            args: force:auth:jwt:grant --clientid ${{ secrets.DEEPIKA_FORCE_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.DEEPIKA_FORCE_USER_NAME }} --setdefaultusername
+            args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
            #npm install sfdx-cli 
            #sfdx plugins:install sfdx-git-delta         
            sudo npm install sfdx-git-delta@latest -g           
-           #git config --global user.email "deepika1007.sfdc@gmail.com"
-           #git config --global user.name "DeepikaMatam"
+           #git config --global user.email "siddharthvarshneya@gmail.com"
+           #git config --global user.name "SiddharthVarshneya "
            #git commit --allow-empty -n -m "Initial commit"
            #git diff Head Head^ > mypatch
            #cat mypatch
