--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -1,3 +1,7 @@
+# This is a basic workflow to help you get started with Actions
+
+name: CI_Delta
+
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
@@ -22,24 +26,26 @@ jobs:
       - uses: actions/checkout@v2
       - name: Decrypting Server Key
         shell: bash
-        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out assets/server.key -base64 -K ${{ secrets.DECRYPTION_KEY }} -iv ${{ secrets.DECRYPTION_IV }}
+        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out assets/server.key -base64 -K ${{ secrets.Deepika_FORCE_DECRYPTION_KEY }} -iv ${{ secrets.Deepika_FORCE_DECRYPTION_IV }}
       - name: Authorizing Org
         uses: forcedotcom/salesforcedx-actions@master
         with:
-            args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
+            args: force:auth:jwt:grant --clientid ${{ secrets.DEEPIKA_FORCE_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.DEEPIKA_FORCE_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
            #npm install sfdx-cli 
            #sfdx plugins:install sfdx-git-delta         
            sudo npm install sfdx-git-delta@latest -g           
            #git config --global user.email "siddharthvarshneya@gmail.com"
-           #git config --global user.name "SiddharthVarshneya "
-           #git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
-           #git fetch --all
-           #git checkout -b pr
-           #git --no-pager diff --name-status pr origin/master
-           sgd --to pr --from origin/master --repo . --output .
-           cat package/package.xml  
+           #git config --global user.name "SiddharthVarshneya"
+           #git commit --allow-empty -n -m "Initial commit"
+           #git diff Head Head^ > mypatch
+           #cat mypatch
+           #git checkout master
+           #git reflog > headshist
+           #cat headshist
+           sgd --to HEAD --from HEAD^ --repo . --output .
+           cat package/package.xml    
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
