--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -33,10 +33,9 @@ jobs:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
-           npm install sfdx-cli
-           sfdx –v
-           sfdx plugins:install sfdx-git-delta         
-           #sudo npm install sfdx-git-delta@latest -g           
+           npm install sfdx-cli 
+           #sfdx plugins:install sfdx-git-delta         
+           sudo npm install sfdx-git-delta@latest -g           
            #git config --global user.email "siddharthvarshneya@gmail.com"
            #git config --global user.name "SiddharthVarshneya"
            #git diff Head Head^ > mypatch
@@ -44,7 +43,7 @@ jobs:
            #git checkout master
            #git reflog > headshist
            #cat headshist
-           sfdx sgd:source:delta --to HEAD --from HEAD^ --output .
+           sgd --to HEAD --from HEAD^ --repo . --output .
            cat package/package.xml    
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
