--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -43,7 +43,9 @@ jobs:
            #git checkout master
            #git reflog > headshist
            #cat headshist
-           sgd --to HEAD --from HEAD^ --repo . --output .
+           git checkut -pr
+           git --no-pager diff --name-status pr origin/master
+           sgd --to pr --from origin/master --repo . --output .
            cat package/package.xml    
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
