--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -33,18 +33,19 @@ jobs:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
-           #npm install sfdx-cli 
+           npm install sfdx-cli 
            #sfdx plugins:install sfdx-git-delta         
            sudo npm install sfdx-git-delta@latest -g           
            #git config --global user.email "siddharthvarshneya@gmail.com"
            #git config --global user.name "SiddharthVarshneya"
-           #git commit --allow-empty -n -m "Initial commit"
            #git diff Head Head^ > mypatch
            #cat mypatch
            #git checkout master
            #git reflog > headshist
            #cat headshist
-           sgd --to HEAD --from HEAD^ --repo . --output .
+           git checkout -b pr
+           git --no-pager diff --name-status pr origin/master
+           sgd --to pr --from origin/master --repo . --output .
            cat package/package.xml    
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
