--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -6,7 +6,7 @@ name: CI_Delta
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   pull_request:
-    branches: [ master ]
+    branches: [ staging ]
   # pull_request:
    #  branches: [ master ]
 
@@ -33,20 +33,12 @@ jobs:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
-           npm install sfdx-cli 
-           #sfdx plugins:install sfdx-git-delta         
-           sudo npm install sfdx-git-delta@latest -g           
-           #git config --global user.email "siddharthvarshneya@gmail.com"
-           #git config --global user.name "SiddharthVarshneya"
-           #git diff Head Head^ > mypatch
-           #cat mypatch
-           #git checkout master
-           #git reflog > headshist
-           #cat headshist
-           git checkout -b pr
-           git --no-pager diff --name-status pr origin/master
-           sgd --to pr --from origin/master --repo . --output .
-           cat package/package.xml    
+           npm install sfdx-git-delta@latest -g
+           git checkout -b pr          
+           git --no-pager diff --name-status pr  origin/staging
+           sgd --to pr  --from origin/staging --repo . --output .
+           echo "--- package.xml generated with added and modified metadata ---"
+           cat package/package.xml   
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
