--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -33,7 +33,7 @@ jobs:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
-           npm install sfdx-git-delta@latest -g
+           sudo npm install sfdx-git-delta@latest -g
            git checkout -b pr          
            git --no-pager diff --name-status pr  origin/Staging
            sgd --to pr  --from origin/Staging --repo . --output .
