--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -34,8 +34,10 @@ jobs:
       - name: "Install App and Create Delta"   
         run: |  
            sudo npm install sfdx-git-delta@latest -g
+           git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+           git fetch --all
            git checkout -b pr          
-           git --no-pager diff --name-status pr Staging
+           git --no-pager diff --name-status pr origin/Staging
            sgd --to pr  --from origin/Staging --repo . --output .
            echo "--- package.xml generated with added and modified metadata ---"
            cat package/package.xml   
