--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
-          args: force:source:deploy -x package/package.xml
+          args: force:source:deploy -x package/package.xml --checkonly
