--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,16 +31,15 @@ jobs:
         uses: forcedotcom/salesforcedx-actions@master
         with:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
-      #- name: "Install App and Create Delta"   
-      #  run: |  
-      #     sudo npm install sfdx-git-delta@latest -g
-      #     git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
-      #     git fetch --all
-      #     git checkout -b pr          
-      #     git --no-pager diff --name-status pr origin/Staging
-      #     sgd --to pr  --from origin/Staging --repo . --output .
-      #     echo "--- package.xml generated with added and modified metadata ---"
-      #     cat package/package.xml   
+      - name: "Install App and Create Delta"   
+        run: |  
+           sudo npm install sfdx-git-delta@latest -g
+           git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+           git fetch --all      
+           git --no-pager diff --name-status ADO-444 origin/Staging
+           sgd --to pr  --from origin/Staging --repo . --output .
+           echo "--- package.xml generated with added and modified metadata ---"
+           cat package/package.xml   
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
