--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ Staging ]
   # pull_request:
    #  branches: [ master ]
 
@@ -17,9 +17,9 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on,Ubuntu is the modern, open source operating system on Linux for the enterprise server, desktop, cloud, and IoT.
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    #runs-on: windows-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -31,7 +31,16 @@ jobs:
         uses: forcedotcom/salesforcedx-actions@master
         with:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
+      - name: "Install App and Create Delta"   
+        run: |  
+           sudo npm install sfdx-git-delta@latest -g
+           git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+           git fetch --all      
+           git --no-pager diff --name-status origin/ADO-444 origin/Staging
+           sgd --to origin/ADO-444  --from origin/Staging --repo . --output .
+           echo "--- package.xml generated with added and modified metadata ---"
+           cat package/package.xml   
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
-          args: force:source:deploy --manifest manifest/package.xml
+          args: force:source:deploy -x package/package.xml
