--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -1,8 +1,12 @@
+# This is a basic workflow to help you get started with Actions
+
+name: CI_Delta
+
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
+  pull_request:
+    branches: [ Staging ]
   # pull_request:
    #  branches: [ master ]
 
@@ -29,20 +33,15 @@ jobs:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
       - name: "Install App and Create Delta"   
         run: |  
-           #npm install sfdx-cli 
-           #sfdx plugins:install sfdx-git-delta         
-           sudo npm install sfdx-git-delta@latest -g           
-           #git config --global user.email "siddharthvarshneya@gmail.com"
-           #git config --global user.name "SiddharthVarshneya "
-           #git commit --allow-empty -n -m "Initial commit"
-           #git diff Head Head^ > mypatch
-           #cat mypatch
-           #git checkout master
-           #git reflog > headshist
-           #cat headshist
-           sgd --to HEAD --from HEAD^ --repo . --output .
-           cat package/package.xml    
+           sudo npm install sfdx-git-delta@latest -g
+           git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+           git fetch --all
+           git checkout -b pr          
+           git --no-pager diff --name-status pr origin/Staging
+           sgd --to pr  --from origin/Staging --repo . --output .
+           echo "--- package.xml generated with added and modified metadata ---"
+           cat package/package.xml   
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
-          args: force:source:deploy -x package/package.xml
+          args: force:source:deploy -x package/package.xml --checkonly
