--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -40,7 +40,8 @@ jobs:
            git --no-pager diff --name-status pr origin/Staging
            sgd --to pr  --from origin/Staging --repo . --output .
            echo "--- package.xml generated with added and modified metadata ---"
-           cat package/package.xml   
+           cat package/package.xml
+           cat destructiveChanges/destructiveChanges.xml
       - name: Deploying Metadata
         uses: forcedotcom/salesforcedx-actions@master
         with:
