--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           args: force:source:deploy -x package/package.xml
       - name: Delete Metadata
+           cat destructiveChanges/destructiveChanges.xml
         uses: forcedotcom/salesforcedx-actions@master
         with:
           args: force:source:delete -p destructiveChanges
