--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -31,6 +31,12 @@ jobs:
         uses: forcedotcom/salesforcedx-actions@master
         with:
             args: force:auth:jwt:grant --clientid ${{ secrets.TARGET_CONSUMER_KEY }} --jwtkeyfile assets/server.key --username ${{ secrets.TARGET_USER_NAME }} --setdefaultusername
+      - name: 'Build and Deploy'
+        run: |
+           wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
+           mkdir sfdx-cli
+           tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
+           ./sfdx-cli/install      
       - name: "Install App and Create Delta"   
         run: |  
            sudo npm install sfdx-git-delta@latest -g
