--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -48,10 +48,8 @@ jobs:
            echo "--- package.xml generated with added and modified metadata ---"
            cat package/package.xml
            cat destructiveChanges/destructiveChanges.xml
-      - name: Deploying Metadata
-        uses: forcedotcom/salesforcedx-actions@master
-        with:
-          args: force:source:deploy -x package/package.xml
-      - name: convert
-        run: sfdx force:source:convert --manifest=package/package.xml --outputdir=convert
+      - name: 'Convert Metadata'
+        run: sfdx force:source:convert --rootdir=force-app --outputdir=convert
+      - name: 'Run Test on Metadata'
+        run: sfdx force:mdapi:deploy --deploydir=convert
         
