--- a/.github/workflows/CICD_Delta.yml
+++ b/.github/workflows/CICD_Delta.yml
@@ -48,8 +48,10 @@ jobs:
            echo "--- package.xml generated with added and modified metadata ---"
            cat package/package.xml
            cat destructiveChanges/destructiveChanges.xml
-      - name: 'Convert Metadata'
-        run: sfdx force:source:convert --manifest=package/package.xml --outputdir=/home/runner/work/KiteDemo1/KiteDemo1/convert
-      - name: 'Run Test on Metadata'
-        run: sfdx force:mdapi:deploy --deploydir=convert
+      - name: Deploying Metadata
+        uses: forcedotcom/salesforcedx-actions@master
+        with:
+          args: force:source:deploy -x package/package.xml
+      - name: 'Delete Metadata'
+        run: sfdx force:mdapi:deploy -d destructiveChanges --ignorewarnings -w -1
         
